add change and forget password swag
