# docs/swagger.yaml
@@ -7,6 +7,17 @@ definitions:
       error:
         type: string
     type: object
+  handlers.ChangePasswordRequest:
+    properties:
+      password:
+        minLength: 8
+        type: string
+      token:
+        type: string
+    required:
+    - password
+    - token
+    type: object
   handlers.LoginRequest:
     properties:
       email:
@@ -29,9 +40,6 @@ definitions:
     type: object
   handlers.RegisterRequest:
     properties:
-      confirm_password:
-        minLength: 8
-        type: string
       email:
         type: string
       fullname:
@@ -40,10 +48,16 @@ definitions:
         minLength: 8
         type: string
     required:
-    - confirm_password
     - email
     - fullname
     - password
+    type: object
+  handlers.SendEmailRequest:
+    properties:
+      email:
+        type: string
+    required:
+    - email
     type: object
   handlers.SuccessResponse:
     properties:
@@ -73,6 +87,58 @@ info:
   title: Authentication API
   version: "1.0"
 paths:
+  /api/v1/auth/change/password:
+    put:
+      consumes:
+      - application/json
+      description: Change password for user
+      parameters:
+      - description: Change password request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.ChangePasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.AuthErrorResponse'
+      summary: Change password
+      tags:
+      - auth
+  /api/v1/auth/forget/password:
+    post:
+      consumes:
+      - application/json
+      description: Send email to user
+      parameters:
+      - description: Send email request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.SendEmailRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.AuthErrorResponse'
+      summary: Send email
+      tags:
+      - auth
   /api/v1/auth/login:
     post:
       consumes:
